testcases/negative/unsupported_version_2_1.vcf
BEGIN:VCARD
VERSION:2.1
N:Doe;John
FN:John Doe
TEL;HOME;VOICE:+1-555-1234
EMAIL;INTERNET:john@example.com
END:VCARD
